--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/styled-components": "^5.1.34",
+    "framer-motion": "^11.3.24",
+    "gsap": "^3.12.5",
+    "i18next": "^23.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.1",
+    "react-icons": "^5.2.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.12",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
