--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.34",
-    "framer-motion": "^11.3.24",
+    "framer-motion": "^11.3.27",
     "gsap": "^3.12.5",
     "i18next": "^23.12.2",
+    "locomotive-scroll": "^4.1.4",
+    "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.1",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.13.0",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "styled-components": "^6.1.12",
+    "three": "^0.167.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -46,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-scroll": "^1.8.10"
   }
 }
